Finish main interface start lists interface

--- a/src/lists.html
+++ b/src/lists.html
@@ -38,44 +38,42 @@
             </div>
         </div>
         <div class="header">
-            <div class="header-second-row">
-                <div class="hi-name">
-                    <div class="big-profile-picture-container">
-                        <img src="assets/profilepicture.png" class="big-profile-picture">
+            <div class="header-lists">
+                <div class="card">
+                    <div class="card-text-container">
+                        <p class="card-text-title">Title card</p>
+                        <p class="card-text">Lorem ipsum
+                            dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam</p>
                     </div>
-                    <div class="greeting-user">
-                        <p class="hi">Hi there,</p>
-                        <p class="user-name-account">John Doe (@johndoe)</p>
+                    <div class="card-icons-container">
+                        <div class="card-icons">
+                            <img src="assets/add-icon.svg" class="icon">
+                            <img src="assets/pen-icon.svg" class="icon">
+                            <img src="assets/trash-bin-icon.svg" class="icon">
+                        </div>
                     </div>
-                </div>
-                <div class="header-buttons">
-                    <button type="button" class="buttons">New list</button>
                 </div>
             </div>
         </div>
         <div class="main-content">
             <div class="cards-projects-container">
-                <p class="cards-projects-title">Click on the list you want to explore.</p>
+                <p class="cards-projects-title">Your tasks</p>
                 <div class="cards-projects">
-                    <a href="./lists.html">
-                        <button class="button-task" type="button">
-                            <div class="card">
-                                <div class="card-text-container">
-                                    <p class="card-text-title">Title card</p>
-                                    <p class="card-text">Lorem ipsum
-                                        dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                        Ut enim ad minim veniam</p>
-                                </div>
-                                <div class="card-icons-container">
-                                    <div class="card-icons">
-                                        <img src="assets/add-icon.svg" class="icon">
-                                        <img src="assets/pen-icon.svg" class="icon">
-                                        <img src="assets/trash-bin-icon.svg" class="icon">
-                                    </div>
-                                </div>
+                    <div class="card-task">
+                        <div class="card-text-container">
+                            <p class="card-text-title">Title card</p>
+                            <p class="card-text">Lorem ipsum
+                                dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                Ut enim ad minim veniam</p>
+                        </div>
+                        <div class="card-icons-container">
+                            <div class="card-icons-tasks">
+                                <img src="assets/pen-icon.svg" class="icon">
+                                <img src="assets/trash-bin-icon.svg" class="icon">
                             </div>
-                        </button>
-                    </a>
+                        </div>
+                    </div>
                         </div>
                     </div>
                 </div>
