Start build forms for creating new lists

--- a/src/lists.html
+++ b/src/lists.html
@@ -22,6 +22,9 @@
             <div class="navigation">
                 <ul id="myUL">
                     <li>
+                        <p class="home sidebar-text"><a href="index.html">Home</a></p>
+                    </li>
+                    <li>
                         <span class="caret sidebar-text">
                             <!--<div class="sidebar-centering-logo-div">
                                 <img src="assets/folder-icon.svg" class="icon caret">
