--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,9 @@
             <div class="navigation">
                 <ul id="myUL">
                     <li>
+                        <p class="home sidebar-text"><a href="index.html">Home</a></p>
+                    </li>
+                    <li>
                         <span class="caret sidebar-text">
                             <!--<div class="sidebar-centering-logo-div">
                                 <img src="assets/folder-icon.svg" class="icon caret">
@@ -49,7 +52,7 @@
                     </div>
                 </div>
                 <div class="header-buttons">
-                    <button type="button" class="buttons">New list</button>
+                    <button type="button" class="buttons" id="new-list">New list</button>
                 </div>
             </div>
         </div>
@@ -80,7 +83,41 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+            <dialog>
+                <div class="center-title">
+                <h1 id="new-book-title">Add a new list</h1>
+            </div>
+                <form id="enter-book" action="https://httpbin.org/post" method="post">
+                    
+                    <div class="position-form">
+                        <div class="form-layout">
+                                <div class="book-title">
+                                    <label for="book-title">Title<br></label>
+                                    <input type="text" id="book-title" name="book-title" required>
+                                </div>
+                                <div class="book-author">
+                                    <label for="book-author">Author<br></label>
+                                    <input type="text" id="book-author" name="book-author" required>
+                                </div>
+                                <div class="book-pages">
+                                    <label for="book-pages">Pages<br></label>
+                                    <input type="number" id="book-pages" name="book-pages" required>
+                                </div>
+                                <div class="book-status">
+                                    <label for="book-status">Status<br></label>
+                                    <select id="book-status" name="book-status" required>
+                                        <option value="true">Read</option>
+                                        <option value="false">Not read</option>
+                                    </select>
+                                </div>
+                        </div>
+                    
+                    <div class="form-buttons">
+                        <button id="submit" type="submit">Submit</button>
+                        <button id="close-button">Close</button>
+                    </div>
+                </div>
+                </form>
+            </dialog>
 </body>
 </html>
