--- a/src/template.html
+++ b/src/template.html
@@ -84,40 +84,31 @@
                 </div>
             </div>
             <dialog>
-                <div class="center-title">
-                <h1 id="new-book-title">Add a new list</h1>
-            </div>
-                <form id="enter-book" action="https://httpbin.org/post" method="post">
+                <div class="dialog-window">
+                    <div class="center-title">
+                    <h1 id="new-book-title">Add a new list</h1>
+                                </div>
+                    <form id="enter-list" action="https://httpbin.org/post" method="post">
                     
-                    <div class="position-form">
-                        <div class="form-layout">
-                                <div class="book-title">
-                                    <label for="book-title">Title<br></label>
-                                    <input type="text" id="book-title" name="book-title" required>
-                                </div>
-                                <div class="book-author">
-                                    <label for="book-author">Author<br></label>
-                                    <input type="text" id="book-author" name="book-author" required>
-                                </div>
-                                <div class="book-pages">
-                                    <label for="book-pages">Pages<br></label>
-                                    <input type="number" id="book-pages" name="book-pages" required>
-                                </div>
-                                <div class="book-status">
-                                    <label for="book-status">Status<br></label>
-                                    <select id="book-status" name="book-status" required>
-                                        <option value="true">Read</option>
-                                        <option value="false">Not read</option>
-                                    </select>
-                                </div>
-                        </div>
-                    
-                    <div class="form-buttons">
-                        <button id="submit" type="submit">Submit</button>
-                        <button id="close-button">Close</button>
+                        <div class="position-form">
+                            <div class="form-layout">
+                                    <div class="list-title-section">
+                                        <label for="list-title">Title<br></label>
+                                        <input type="text" id="list-title" name="list-title" required>
+                                    </div>
+                                    <div class="list-description">
+                                        <label for="list-description">Description<br></label>
+                                        <input type="text" id="list-description" name="list-description">
+                                    </div>
+                                    </div>
+                                    <div class="form-buttons">
+                                        <button id="submit" type="submit">Submit</button>
+                                        <button id="close-button">Close</button>
+                                    </div>
+                            </div>   
                     </div>
+                    </form>
                 </div>
-                </form>
             </dialog>
 </body>
 </html>
