Close form when you submit

--- a/src/template.html
+++ b/src/template.html
@@ -69,11 +69,9 @@
                                         dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                         Ut enim ad minim veniam</p>
                                 </div>
-                                <div class="card-icons-container">
+                                <div class="card-icons-container-new-list">
                                     <div class="card-icons">
                                         <img src="assets/add-icon.svg" class="icon">
-                                        <img src="assets/pen-icon.svg" class="icon">
-                                        <img src="assets/trash-bin-icon.svg" class="icon">
                                     </div>
                                 </div>
                             </div>
