--- a/src/template.html
+++ b/src/template.html
@@ -71,7 +71,7 @@
                                 </div>
                                 <div class="card-icons-container-new-list">
                                     <div class="card-icons">
-                                        <input type="image" src="assets/add-icon.svg" class="icon">
+                                        <input type="image" src="assets/add-icon.svg" class="icon add-task">
                                     </div>
                                 </div>
                             </div>
