--- a/src/lists.html
+++ b/src/lists.html
@@ -42,7 +42,7 @@
         </div>
         <div class="header">
             <div class="header-lists">
-                <div class="card">
+            <!--   <div class="card">
                     <div class="card-text-container">
                         <p class="card-text-title">Title card</p>
                         <p class="card-text">Lorem ipsum
@@ -56,7 +56,7 @@
                             <img src="assets/trash-bin-icon.svg" class="icon">
                         </div>
                     </div>
-                </div>
+                </div> -->   
             </div>
         </div>
         <div class="main-content">
