Create form for creating tasks

--- a/src/template.html
+++ b/src/template.html
@@ -77,7 +77,7 @@
                                         <label for="list-title">Title<br></label>
                                         <input type="text" id="list-title" name="list-title" required>
                                     </div>
-                                    <div class="list-description">
+                                    <div class="list-description-section">
                                         <label for="list-description">Description<br></label>
                                         <input type="text" id="list-description" name="list-description">
                                     </div>
