Modify event bubbling

--- a/src/template.html
+++ b/src/template.html
@@ -101,7 +101,7 @@
                             <div class="form-layout">
                                     <div class="task-title-section">
                                         <label for="task-title">Title<br></label>
-                                        <input type="text" id="task-title" name="task-title" required>
+                                        <input type="text" id="task-title" name="task-title">
                                     </div>
                                     <div class="task-description-section">
                                         <label for="task-description">Description<br></label>
