Organize functions in the right modules
Next step is to connect the form to the
create-task function. Follow the create-list
logic and apply a similar one. Remember that
the copies for the mainlist and the specific list
are located in an object called addTaskToThisList.
Retrieve, change and push.

--- a/src/template.html
+++ b/src/template.html
@@ -69,7 +69,7 @@
                     <div class="center-title">
                     <h1 id="new-book-title">Add a new list</h1>
                                 </div>
-                    <form id="enter-list" action="https://httpbin.org/post" method="post">
+                    <form id="enter-list" action="" method="post">
                     
                         <div class="position-form">
                             <div class="form-layout">
@@ -96,7 +96,7 @@
                     <div class="center-title">
                     <h1 id="new-book-title">Add a new task</h1>
                                 </div>
-                    <form id="enter-list" action="https://httpbin.org/post" method="post">
+                    <form id="enter-task" action="" method="post">
                         <div class="position-form">
                             <div class="form-layout">
                                     <div class="task-title-section">
@@ -127,8 +127,8 @@
                                         </select>
                                     </div>
                                     <div class="form-buttons">
-                                        <button id="submit" type="submit">Submit</button>
-                                        <button id="close-button">Close</button>
+                                        <button id="task-submit" type="submit">Submit</button>
+                                        <button id="task-close-button">Close</button>
                                     </div>
                                 </div>
                             </div>
