--- a/src/lists.html
+++ b/src/lists.html
@@ -83,44 +83,44 @@
             </div>
         </div>
     </div>
-    <dialog class="task-dialog">
+    <dialog class="task-dialog-lview">
         <div class="dialog-window">
             <div class="center-title">
             <h1 id="new-book-title">Add a new task</h1>
                         </div>
-            <form id="enter-list" action="https://httpbin.org/post" method="post">
+            <form id="enter-task-lview" action="" method="post">
                 <div class="position-form">
                     <div class="form-layout">
                             <div class="task-title-section">
                                 <label for="task-title">Title<br></label>
-                                <input type="text" id="task-title" name="task-title">
+                                <input type="text" id="task-title-lview" name="task-title">
                             </div>
                             <div class="task-description-section">
                                 <label for="task-description">Description<br></label>
-                                <input type="text" id="task-description" name="task-description">
+                                <input type="text" id="task-description-lview" name="task-description">
                             </div>
                             <div class="task-date-section">
                                 <label for="task-date">Due date<br></label>
-                                <input type="date" id="task-date" name="task-date">
+                                <input type="date" id="task-date-lview" name="task-date">
                             </div>
                             <div class="task-priority-section">
                                 <label for="task-priority">Priority<br></label>
-                                <select id="task-priority" name="task-priority">
+                                <select id="task-priority-lview" name="task-priority">
                                     <option value="0">Low</option>
                                     <option value="1">High</option>
                                 </select>
                             </div>
                             <div class="task-status-section">
                                 <label for="task-status">Status<br></label>
-                                <select id="task-status" name="task-status">
+                                <select id="task-status-lview" name="task-status">
                                     <option value="0">To do</option>
                                     <option value="1">Doing</option>
                                     <option value="2">Done</option>
                                 </select>
                             </div>
                             <div class="form-buttons">
-                                <button id="submit" type="submit">Submit</button>
-                                <button id="close-button">Close</button>
+                                <button id="task-submit-lview" type="submit">Submit</button>
+                                <button id="task-close-button-lview">Close</button>
                             </div>
                         </div>
                     </div>
