--- a/src/lists.html
+++ b/src/lists.html
@@ -92,26 +92,26 @@
                 <div class="position-form">
                     <div class="form-layout">
                             <div class="task-title-section">
-                                <label for="task-title">Title<br></label>
+                                <label for="task-title-lview">Title<br></label>
                                 <input type="text" id="task-title-lview" name="task-title">
                             </div>
                             <div class="task-description-section">
-                                <label for="task-description">Description<br></label>
+                                <label for="task-description-lview">Description<br></label>
                                 <input type="text" id="task-description-lview" name="task-description">
                             </div>
                             <div class="task-date-section">
-                                <label for="task-date">Due date<br></label>
+                                <label for="task-date-lview">Due date<br></label>
                                 <input type="date" id="task-date-lview" name="task-date">
                             </div>
                             <div class="task-priority-section">
-                                <label for="task-priority">Priority<br></label>
+                                <label for="task-priority-lview">Priority<br></label>
                                 <select id="task-priority-lview" name="task-priority">
                                     <option value="0">Low</option>
                                     <option value="1">High</option>
                                 </select>
                             </div>
                             <div class="task-status-section">
-                                <label for="task-status">Status<br></label>
+                                <label for="task-status-lview">Status<br></label>
                                 <select id="task-status-lview" name="task-status">
                                     <option value="0">To do</option>
                                     <option value="1">Doing</option>
