--- a/src/lists.html
+++ b/src/lists.html
@@ -73,7 +73,7 @@
     <dialog id="task-dialog-lview">
         <div class="dialog-window">
             <div class="center-title">
-            <h1 id="new-book-title">Add a new task</h1>
+            <h1>Add a new task</h1>
                         </div>
             <form id="enter-task-lview" action="" method="post">
                 <div class="position-form">
@@ -107,7 +107,7 @@
                             </div>
                             <div class="form-buttons">
                                 <button id="task-submit-lview" type="submit">Submit</button>
-                                <button id="task-close-button-lview">Close</button>
+                                <button id="task-close-button-lview">Cancel</button>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
     <dialog id="edit-list-dialog">
         <div class="dialog-window">
             <div class="center-title">
-            <h1 id="new-book-title">Edit list</h1>
+            <h1>Edit list</h1>
             </div>
             <form id="edit-list" action="" method="post">
                 <div class="position-form">
@@ -128,16 +128,32 @@
                             </div>
                             <div class="list-description-section">
                                 <label for="edit-list-description">Description<br></label>
-                                <input type="text" id="edit-list-description" name="edit-list-description">
+                                <input type="text" id="edit-list-description" name="edit-list-description" >
                             </div>
                             </div>
                             <div class="form-buttons">
                                 <button id="edit-save-changes" type="submit">Save changes</button>
-                                <button id="edit-close-button">Close</button>
+                                <button id="edit-close-button">Cancel</button>
                             </div>
                     </div>   
             </div>
             </form>
+        </div>
+    </dialog>
+    <dialog id="delete-list-dialog">
+        <div class="dialog-window">
+            <div class="center-title">
+            <h1>Delete list</h1>
+            </div>
+                <div class="position-form">
+                    <p>Are you sure you want to delete this list? This action cannot be undone.</p>
+                            <div class="form-buttons">
+                                <button id="delete">Delete</button>
+                                <button id="delete-close-button">Cancel</button>
+                            </div>
+                    </div>   
+            </div>
+           
         </div>
     </dialog>
 </body>
