--- a/src/template.html
+++ b/src/template.html
@@ -75,16 +75,16 @@
                             <div class="form-layout">
                                     <div class="list-title-section">
                                         <label for="list-title">Title<br></label>
-                                        <input type="text" id="list-title" name="list-title" required>
+                                        <input type="text" id="list-title" name="list-title" >
                                     </div>
                                     <div class="list-description-section">
                                         <label for="list-description">Description<br></label>
-                                        <input type="text" id="list-description" name="list-description">
+                                        <input type="text" id="list-description" name="list-description" >
                                     </div>
                                     </div>
                                     <div class="form-buttons">
                                         <button id="submit" type="submit">Submit</button>
-                                        <button id="close-button">Close</button>
+                                        <button id="close-button">Cancel</button>
                                     </div>
                             </div>   
                     </div>
