Add delete function and return

--- a/src/lists.html
+++ b/src/lists.html
@@ -22,7 +22,7 @@
             <div class="navigation">
                 <ul id="myUL">
                     <li>
-                        <p class="home sidebar-text"><a href="index.html">Home</a></p>
+                        <p class="home sidebar-text"><a id="home" href="index.html">Home</a></p>
                     </li>
                     <li>
                         <span class="caret sidebar-text">
@@ -146,7 +146,7 @@
             <h1>Delete list</h1>
             </div>
                 <div class="position-form">
-                    <p>Are you sure you want to delete this list? This action cannot be undone.</p>
+                    <p class="message">Are you sure you want to delete this list? This action cannot be undone.</p>
                             <div class="form-buttons">
                                 <button id="delete">Delete</button>
                                 <button id="delete-close-button">Cancel</button>
