--- a/src/lists.html
+++ b/src/lists.html
@@ -156,5 +156,49 @@
            
         </div>
     </dialog>
+    <dialog id="edit-task-dialog-lview">
+        <div class="dialog-window">
+            <div class="center-title">
+            <h1>Edit a task</h1>
+                        </div>
+            <form id="edit-task-lview" action="" method="post">
+                <div class="position-form">
+                    <div class="form-layout">
+                            <div class="task-title-section">
+                                <label for="edit-task-title-lview">Title<br></label>
+                                <input type="text" id="edit-task-title-lview" name="edit-task-title">
+                            </div>
+                            <div class="task-description-section">
+                                <label for="edit-task-description-lview">Description<br></label>
+                                <input type="text" id="edit-task-description-lview" name="edit-task-description">
+                            </div>
+                            <div class="task-date-section">
+                                <label for="edit-task-date-lview">Due date<br></label>
+                                <input type="date" id="edit-task-date-lview" name="edit-task-date">
+                            </div>
+                            <div class="task-priority-section">
+                                <label for="edit-task-priority-lview">Priority<br></label>
+                                <select id="edit-task-priority-lview" name="edit-task-priority">
+                                    <option value="0">Low</option>
+                                    <option value="1">High</option>
+                                </select>
+                            </div>
+                            <div class="task-status-section">
+                                <label for="edit-task-status-lview">Status<br></label>
+                                <select id="edit-task-status-lview" name="edit-task-status">
+                                    <option value="0">To do</option>
+                                    <option value="1">Doing</option>
+                                    <option value="2">Done</option>
+                                </select>
+                            </div>
+                            <div class="form-buttons">
+                                <button id="edit-task-submit-lview" type="submit">Submit</button>
+                                <button id="edit-task-close-button-lview">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+                </form> 
+            </div>  
+    </dialog>
 </body>
 </html>
