Add edit tasks functionality
Now the users can edit tasks, and they will be reflected on the DOM

--- a/src/lists.html
+++ b/src/lists.html
@@ -86,6 +86,15 @@
                                 <label for="task-description-lview">Description<br></label>
                                 <input type="text" id="task-description-lview" name="task-description">
                             </div>
+                           
+                            <div class="task-status-section">
+                                <label for="task-status-lview">Status<br></label>
+                                <select id="task-status-lview" name="task-status">
+                                    <option value="0">To do</option>
+                                    <option value="1">Doing</option>
+                                    <option value="2">Done</option>
+                                </select>
+                            </div>
                             <div class="task-date-section">
                                 <label for="task-date-lview">Due date<br></label>
                                 <input type="date" id="task-date-lview" name="task-date">
@@ -95,14 +104,6 @@
                                 <select id="task-priority-lview" name="task-priority">
                                     <option value="0">Low</option>
                                     <option value="1">High</option>
-                                </select>
-                            </div>
-                            <div class="task-status-section">
-                                <label for="task-status-lview">Status<br></label>
-                                <select id="task-status-lview" name="task-status">
-                                    <option value="0">To do</option>
-                                    <option value="1">Doing</option>
-                                    <option value="2">Done</option>
                                 </select>
                             </div>
                             <div class="form-buttons">
@@ -124,7 +125,7 @@
                     <div class="form-layout">
                             <div class="list-title-section">
                                 <label for="edit-list-title">Change title<br></label>
-                                <input type="text" id="edit-list-title" name="edit-list-title" required>
+                                <input type="text" id="edit-list-title" name="edit-list-title">
                             </div>
                             <div class="list-description-section">
                                 <label for="edit-list-description">Description<br></label>
@@ -172,6 +173,14 @@
                                 <label for="edit-task-description-lview">Description<br></label>
                                 <input type="text" id="edit-task-description-lview" name="edit-task-description">
                             </div>
+                            <div class="task-status-section">
+                                <label for="edit-task-status-lview">Status<br></label>
+                                <select id="edit-task-status-lview" name="edit-task-status">
+                                    <option value="0">To do</option>
+                                    <option value="1">Doing</option>
+                                    <option value="2">Done</option>
+                                </select>
+                            </div>
                             <div class="task-date-section">
                                 <label for="edit-task-date-lview">Due date<br></label>
                                 <input type="date" id="edit-task-date-lview" name="edit-task-date">
@@ -181,14 +190,6 @@
                                 <select id="edit-task-priority-lview" name="edit-task-priority">
                                     <option value="0">Low</option>
                                     <option value="1">High</option>
-                                </select>
-                            </div>
-                            <div class="task-status-section">
-                                <label for="edit-task-status-lview">Status<br></label>
-                                <select id="edit-task-status-lview" name="edit-task-status">
-                                    <option value="0">To do</option>
-                                    <option value="1">Doing</option>
-                                    <option value="2">Done</option>
                                 </select>
                             </div>
                             <div class="form-buttons">
