Create delete list dialog and add event listeners

--- a/src/lists.html
+++ b/src/lists.html
@@ -201,5 +201,21 @@
                 </form> 
             </div>  
     </dialog>
+        <dialog id="delete-task-dialog">
+        <div class="dialog-window">
+            <div class="center-title">
+            <h1>Delete task</h1>
+            </div>
+                <div class="position-form">
+                    <p class="message">Are you sure you want to delete this task? This action cannot be undone.</p>
+                            <div class="form-buttons">
+                                <button id="delete-task">Delete</button>
+                                <button id="delete-task-close-button">Cancel</button>
+                            </div>
+                    </div>   
+            </div>
+           
+        </div>
+    </dialog>
 </body>
 </html>
