Add delete tasks
Now tasks can be deleted, and the DOM is updated.
In process: adding tasks from the home interface

--- a/src/template.html
+++ b/src/template.html
@@ -91,7 +91,7 @@
                     </form>
                 </div>
             </dialog>
-            <dialog class="task-dialog">
+            <dialog id="task-dialog">
                 <div class="dialog-window">
                     <div class="center-title">
                     <h1 id="new-book-title">Add a new task</h1>
