Final adjustments and cleaning code

--- a/src/template.html
+++ b/src/template.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>My ToDo List</title>
     <link href="styles.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/my-todo-logo.png">
 </head>
 <body>
     <div class="global-container">
@@ -26,10 +27,6 @@
                     </li>
                     <li>
                         <span class="caret sidebar-text">
-                            <!--<div class="sidebar-centering-logo-div">
-                                <img src="assets/folder-icon.svg" class="icon caret">
-                            </div>
-                             --> 
                             <span class="label">Projects</span>
                     </span> 
                     <ul class="nested">
