--- a/src/lists.html
+++ b/src/lists.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>My ToDo List</title>
     <link href="styles.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/my-todo-logo.png">
 </head>
 <body>
     <div class="global-container">
@@ -26,10 +27,6 @@
                     </li>
                     <li>
                         <span class="caret sidebar-text">
-                            <!--<div class="sidebar-centering-logo-div">
-                                <img src="assets/folder-icon.svg" class="icon caret">
-                            </div>
-                             --> 
                             <span class="label">Projects</span>
                     </span> 
                     <ul class="nested">
@@ -40,21 +37,6 @@
         </div>
         <div class="header">
             <div class="header-lists">
-            <!--   <div class="card">
-                    <div class="card-text-container">
-                        <p class="card-text-title">Title card</p>
-                        <p class="card-text">Lorem ipsum
-                            dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam</p>
-                    </div>
-                    <div class="card-icons-container">
-                        <div class="card-icons">
-                            <img src="assets/add-icon.svg" class="icon">
-                            <img src="assets/pen-icon.svg" class="icon">
-                            <img src="assets/trash-bin-icon.svg" class="icon">
-                        </div>
-                    </div>
-                </div> -->   
             </div>
         </div>
         <div class="main-content">
@@ -152,7 +134,6 @@
                             </div>
                     </div>   
             </div>
-           
         </div>
     </dialog>
     <dialog id="edit-task-dialog-lview">
@@ -212,7 +193,6 @@
                             </div>
                     </div>   
             </div>
-           
         </div>
     </dialog>
 </body>
